# c-strict-fibonacci-heaps

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  README.md  USAGE.md
scripts/: run_ubuntu_tests.sh  update_shields.py
src/: c-strict-fibonacci-heaps.c.in  c-strict-fibonacci-heaps.h.in
tests/: test_basic.c
